<resources>

    <!-- Timer Screen -->
    <string name="timer_notice">Please have any other players join this same room, before the game starts. If they join after the below time, they will not be added to the game.</string>

    <!--Lobby Screen-->
    <string name="lobby_tag_status">Status</string>
    <string name="lobby_tag_name">Name</string>
    <string name="lobby_tag_kills">Kills</string>


    <!--Lobby Item-->
    <string name="lobby_item_loading_name">(loading name...)</string>
    <string name="lobby_item_loading_kills">(loading kills...)</string>


    <!--Me Screen-->
    <string name="my_status">My Status</string>
    <string name="my_kills">My Kills</string>
    <string name="my_name">My Name</string>


    <!--Target Screen-->
    <string name="target_name">Target Name Not Set</string>
    <string name="target_distance">Not Feasible</string>
    <string name="target_spotted_text_in_range">Target in range</string>
    <string name="target_spotted_text_not_in_range">Target not in range</string>
    <string name="kill_button">Kill</string>


    <!--Other-->
    <string name="app_name">Assassin</string>
    <string name="google_maps_key">AIzaSyDGcFA_9xspZs6BpUYrwHebeDjHpLFaB_o</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Settings -->
    <string name="settings_title">Settings</string>
    <string name="daynight">Day/Night</string>

    <!--End Text-->
    <string name="end">YOU WERE BEING KILLED BY YOUR HUNTER!!</string>

</resources>
