<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uw.samueldc.assassin_manager.MeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<!--
            <TextView
                android:id="@+id/targetSpottedText"
                style="@style/mainAppText"
                android:text="Hello?" />-->


            <TextView
                android:id="@+id/myName"
                style="@style/targetText"
                android:text="@string/my_name"/>

            <TextView
                android:id="@+id/myScore"
                style="@style/targetText"
                android:text="@string/my_kills" />


            <TextView
                android:id="@+id/myStatus"
                style="@style/targetText"
                android:text="@string/my_status" />
    </LinearLayout>

</FrameLayout>
